Fix overflow.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,7 +1,7 @@
 @import 'vue-phone-number-input/dist/vue-phone-number-input.css';
 
 html {
-  overflow: hidden !important;
+  overflow: auto !important;
 }
 
 .vue-phone-number-input .select-country-container {
